// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookCard should match snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <BookCard
    authors={
      Array [
        "Seth",
      ]
    }
    image="wwww.image.com"
    link="wwww.link.com"
    publisher="SethCo"
    title="Ruby"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <img
          alt=""
          src="wwww.image.com"
        />,
        <div
          className="desc"
        >
          <h2>
            Ruby
          </h2>
          <h3>
            <span>
              Seth
            </span>
          </h3>
          <div>
            Publisher: 
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SethCo",
                }
              }
            />
          </div>
          <a
            href="wwww.link.com"
            rel="noopener noreferrer"
            target="_blank"
          >
            Read more
          </a>
        </div>,
      ],
      "className": "card-container",
      "onClick": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "alt": "",
          "src": "wwww.image.com",
        },
        "ref": null,
        "rendered": null,
        "type": "img",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h2>
              Ruby
            </h2>,
            <h3>
              <span>
                Seth
              </span>
            </h3>,
            <div>
              Publisher: 
              <div
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SethCo",
                  }
                }
              />
            </div>,
            <a
              href="wwww.link.com"
              rel="noopener noreferrer"
              target="_blank"
            >
              Read more
            </a>,
          ],
          "className": "desc",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Ruby",
            },
            "ref": null,
            "rendered": "Ruby",
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <span>
                  Seth
                </span>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "authors-0",
                "nodeType": "host",
                "props": Object {
                  "children": "Seth",
                },
                "ref": null,
                "rendered": "Seth",
                "type": "span",
              },
            ],
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Publisher: ",
                <div
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "SethCo",
                    }
                  }
                />,
              ],
            },
            "ref": null,
            "rendered": Array [
              "Publisher: ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "dangerouslySetInnerHTML": Object {
                    "__html": "SethCo",
                  },
                },
                "ref": null,
                "rendered": null,
                "type": "div",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Read more",
              "href": "wwww.link.com",
              "rel": "noopener noreferrer",
              "target": "_blank",
            },
            "ref": null,
            "rendered": "Read more",
            "type": "a",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <img
            alt=""
            src="wwww.image.com"
          />,
          <div
            className="desc"
          >
            <h2>
              Ruby
            </h2>
            <h3>
              <span>
                Seth
              </span>
            </h3>
            <div>
              Publisher: 
              <div
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SethCo",
                  }
                }
              />
            </div>
            <a
              href="wwww.link.com"
              rel="noopener noreferrer"
              target="_blank"
            >
              Read more
            </a>
          </div>,
        ],
        "className": "card-container",
        "onClick": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "",
            "src": "wwww.image.com",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h2>
                Ruby
              </h2>,
              <h3>
                <span>
                  Seth
                </span>
              </h3>,
              <div>
                Publisher: 
                <div
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "SethCo",
                    }
                  }
                />
              </div>,
              <a
                href="wwww.link.com"
                rel="noopener noreferrer"
                target="_blank"
              >
                Read more
              </a>,
            ],
            "className": "desc",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Ruby",
              },
              "ref": null,
              "rendered": "Ruby",
              "type": "h2",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span>
                    Seth
                  </span>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "authors-0",
                  "nodeType": "host",
                  "props": Object {
                    "children": "Seth",
                  },
                  "ref": null,
                  "rendered": "Seth",
                  "type": "span",
                },
              ],
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "Publisher: ",
                  <div
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "SethCo",
                      }
                    }
                  />,
                ],
              },
              "ref": null,
              "rendered": Array [
                "Publisher: ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "dangerouslySetInnerHTML": Object {
                      "__html": "SethCo",
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "div",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Read more",
                "href": "wwww.link.com",
                "rel": "noopener noreferrer",
                "target": "_blank",
              },
              "ref": null,
              "rendered": "Read more",
              "type": "a",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`BookCard should match snapshot 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <BookCard
    authors={
      Array [
        "Seth",
        "Joe",
      ]
    }
    image="wwww.image.com"
    link="wwww.link.com"
    publisher="SethCo"
    title="Ruby"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <img
          alt=""
          src="wwww.image.com"
        />,
        <div
          className="desc"
        >
          <h2>
            Ruby
          </h2>
          <h3>
            <span>
              Seth
              , 
            </span>
            <span>
              Joe
            </span>
          </h3>
          <div>
            Publisher: 
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SethCo",
                }
              }
            />
          </div>
          <a
            href="wwww.link.com"
            rel="noopener noreferrer"
            target="_blank"
          >
            Read more
          </a>
        </div>,
      ],
      "className": "card-container",
      "onClick": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "alt": "",
          "src": "wwww.image.com",
        },
        "ref": null,
        "rendered": null,
        "type": "img",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h2>
              Ruby
            </h2>,
            <h3>
              <span>
                Seth
                , 
              </span>
              <span>
                Joe
              </span>
            </h3>,
            <div>
              Publisher: 
              <div
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SethCo",
                  }
                }
              />
            </div>,
            <a
              href="wwww.link.com"
              rel="noopener noreferrer"
              target="_blank"
            >
              Read more
            </a>,
          ],
          "className": "desc",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Ruby",
            },
            "ref": null,
            "rendered": "Ruby",
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <span>
                  Seth
                  , 
                </span>,
                <span>
                  Joe
                </span>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "authors-0",
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Seth",
                    ", ",
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Seth",
                  ", ",
                ],
                "type": "span",
              },
              Object {
                "instance": null,
                "key": "authors-1",
                "nodeType": "host",
                "props": Object {
                  "children": "Joe",
                },
                "ref": null,
                "rendered": "Joe",
                "type": "span",
              },
            ],
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Publisher: ",
                <div
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "SethCo",
                    }
                  }
                />,
              ],
            },
            "ref": null,
            "rendered": Array [
              "Publisher: ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "dangerouslySetInnerHTML": Object {
                    "__html": "SethCo",
                  },
                },
                "ref": null,
                "rendered": null,
                "type": "div",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Read more",
              "href": "wwww.link.com",
              "rel": "noopener noreferrer",
              "target": "_blank",
            },
            "ref": null,
            "rendered": "Read more",
            "type": "a",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <img
            alt=""
            src="wwww.image.com"
          />,
          <div
            className="desc"
          >
            <h2>
              Ruby
            </h2>
            <h3>
              <span>
                Seth
                , 
              </span>
              <span>
                Joe
              </span>
            </h3>
            <div>
              Publisher: 
              <div
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SethCo",
                  }
                }
              />
            </div>
            <a
              href="wwww.link.com"
              rel="noopener noreferrer"
              target="_blank"
            >
              Read more
            </a>
          </div>,
        ],
        "className": "card-container",
        "onClick": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "",
            "src": "wwww.image.com",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h2>
                Ruby
              </h2>,
              <h3>
                <span>
                  Seth
                  , 
                </span>
                <span>
                  Joe
                </span>
              </h3>,
              <div>
                Publisher: 
                <div
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "SethCo",
                    }
                  }
                />
              </div>,
              <a
                href="wwww.link.com"
                rel="noopener noreferrer"
                target="_blank"
              >
                Read more
              </a>,
            ],
            "className": "desc",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Ruby",
              },
              "ref": null,
              "rendered": "Ruby",
              "type": "h2",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span>
                    Seth
                    , 
                  </span>,
                  <span>
                    Joe
                  </span>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "authors-0",
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Seth",
                      ", ",
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "Seth",
                    ", ",
                  ],
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": "authors-1",
                  "nodeType": "host",
                  "props": Object {
                    "children": "Joe",
                  },
                  "ref": null,
                  "rendered": "Joe",
                  "type": "span",
                },
              ],
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "Publisher: ",
                  <div
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "SethCo",
                      }
                    }
                  />,
                ],
              },
              "ref": null,
              "rendered": Array [
                "Publisher: ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "dangerouslySetInnerHTML": Object {
                      "__html": "SethCo",
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "div",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Read more",
                "href": "wwww.link.com",
                "rel": "noopener noreferrer",
                "target": "_blank",
              },
              "ref": null,
              "rendered": "Read more",
              "type": "a",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`BookCard should match snapshot 3`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <BookCard
    authors={null}
    image="wwww.image.com"
    link="wwww.link.com"
    publisher="SethCo"
    title="Ruby"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <img
          alt=""
          src="wwww.image.com"
        />,
        <div
          className="desc"
        >
          <h2>
            Ruby
          </h2>
          <h3>
            Author not available
          </h3>
          <div>
            Publisher: 
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SethCo",
                }
              }
            />
          </div>
          <a
            href="wwww.link.com"
            rel="noopener noreferrer"
            target="_blank"
          >
            Read more
          </a>
        </div>,
      ],
      "className": "card-container",
      "onClick": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "alt": "",
          "src": "wwww.image.com",
        },
        "ref": null,
        "rendered": null,
        "type": "img",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h2>
              Ruby
            </h2>,
            <h3>
              Author not available
            </h3>,
            <div>
              Publisher: 
              <div
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SethCo",
                  }
                }
              />
            </div>,
            <a
              href="wwww.link.com"
              rel="noopener noreferrer"
              target="_blank"
            >
              Read more
            </a>,
          ],
          "className": "desc",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Ruby",
            },
            "ref": null,
            "rendered": "Ruby",
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Author not available",
            },
            "ref": null,
            "rendered": "Author not available",
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Publisher: ",
                <div
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "SethCo",
                    }
                  }
                />,
              ],
            },
            "ref": null,
            "rendered": Array [
              "Publisher: ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "dangerouslySetInnerHTML": Object {
                    "__html": "SethCo",
                  },
                },
                "ref": null,
                "rendered": null,
                "type": "div",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Read more",
              "href": "wwww.link.com",
              "rel": "noopener noreferrer",
              "target": "_blank",
            },
            "ref": null,
            "rendered": "Read more",
            "type": "a",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <img
            alt=""
            src="wwww.image.com"
          />,
          <div
            className="desc"
          >
            <h2>
              Ruby
            </h2>
            <h3>
              Author not available
            </h3>
            <div>
              Publisher: 
              <div
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SethCo",
                  }
                }
              />
            </div>
            <a
              href="wwww.link.com"
              rel="noopener noreferrer"
              target="_blank"
            >
              Read more
            </a>
          </div>,
        ],
        "className": "card-container",
        "onClick": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "",
            "src": "wwww.image.com",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h2>
                Ruby
              </h2>,
              <h3>
                Author not available
              </h3>,
              <div>
                Publisher: 
                <div
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "SethCo",
                    }
                  }
                />
              </div>,
              <a
                href="wwww.link.com"
                rel="noopener noreferrer"
                target="_blank"
              >
                Read more
              </a>,
            ],
            "className": "desc",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Ruby",
              },
              "ref": null,
              "rendered": "Ruby",
              "type": "h2",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Author not available",
              },
              "ref": null,
              "rendered": "Author not available",
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "Publisher: ",
                  <div
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "SethCo",
                      }
                    }
                  />,
                ],
              },
              "ref": null,
              "rendered": Array [
                "Publisher: ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "dangerouslySetInnerHTML": Object {
                      "__html": "SethCo",
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "div",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Read more",
                "href": "wwww.link.com",
                "rel": "noopener noreferrer",
                "target": "_blank",
              },
              "ref": null,
              "rendered": "Read more",
              "type": "a",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
